WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211565
Fix for crash in AXIsolatedObject::identifierAttribute.
https://bugs.webkit.org/show_bug.cgi?id=211565
Summary
Fix for crash in AXIsolatedObject::identifierAttribute.
Andres Gonzalez
Reported
2020-05-07 06:31:17 PDT
Fix for crash in AXIsolatedTree::identifierAttribute.
Attachments
Patch
(2.07 KB, patch)
2020-05-07 06:42 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andres Gonzalez
Comment 1
2020-05-07 06:42:35 PDT
Created
attachment 398731
[details]
Patch
EWS
Comment 2
2020-05-07 07:29:43 PDT
Committed
r261285
: <
https://trac.webkit.org/changeset/261285
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 398731
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-05-07 07:30:25 PDT
<
rdar://problem/62975938
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug