Fix for crash in AXIsolatedObject::identifierAttribute. https://bugs.webkit.org/show_bug.cgi?id=211565

Reviewed by Chris Fleizach.

Covered by existing tests.

When adding the identifierAttribute property to the AXIsolatedObject's
properties map, must make an isolatedCopy of it in order to retrieve it
on the secondary thread.

* accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::initializeAttributeData):


Canonical link: https://commits.webkit.org/224458@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261285 268f45cc-cd09-0410-ab3c-d52691b4dbfc